<resources>
    <string name="app_name">SpellBooks</string>
    <string name="username_placeholder">Username</string>
    <string name="password_hint">Password</string>
    <string name="create_account_note">Not a registered wizard?</string>
    <string name="create_account_link"><u>Create a new account!</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_placeholder">Email</string>
    <string name="create_account">Create Account</string>
    <string name="account_creation">Account Creation</string>
    <string name="login">Login</string>
    <string name="favourite_genre">Favourite Genre</string>
    <string name="favourite_book">Favourite Book</string>
    <string name="book_reading_goal_per_year">Book Reading Goal (per year)</string>
    <string name="page_reading_goal_per_year">Page Reading Goal (per year)</string>
    <string name="goal_progress">Progress</string>
    <string name="books_completed_so_far">Books completed so far:</string>
    <string name="total_books_to_finish">Total books to finish:</string>
    <string name="no_goal_set">No goal set</string>
    <string name="pages_read_so_far">Pages read so far:</string>
    <string name="total_pages_to_read">Total pages to read:</string>
    <string name="stats">Stats</string>
    <string name="most_read_genre">Most read genre:</string>
    <string name="most_recent_book_read">Most recent book read:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="book_list">Book List</string>
    <string name="home">Home</string>
    <string name="press_to_add_a_book_to_the_recyclerview">Press to add a book to the RecyclerView</string>
    <string name="placeholder">Placeholder</string>
    <string name="book_read">Completed</string>
    <string name="add_book">Add Book</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="total_pages">Total Pages</string>
    <string name="genre">Genre</string>
    <string name="publisher">Publisher</string>
    <string name="year_published">Year Published</string>
    <string name="isbn_code">ISBN Code</string>
    <string name="star_rating_1_5">Star Rating (1-5)</string>
    <string name="edit_account_details">Edit Account Details</string>
    <string name="username_indicator">Username:</string>
    <string name="password_indicator">Password:</string>
    <string name="favourite_genre_indicator">Favourite Genre:</string>
    <string name="favourite_book_indicator">Favourite Book:</string>
    <string name="book_reading_goal_per_year_indicator">Book Reading Goal/yr:</string>
    <string name="page_reading_goal_per_year_indicator">Page Reading Goal/yr:</string>
    <string name="no_books_read">No books read recently</string>
    <string name="edit">Edit</string>
    <string name="enter_a_new_value">Enter a new value</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="log_out">Log Out</string>
    <string name="edit_book_info">Edit Book Info</string>
    <string name="return_to_previous">Return</string>
    <string name="back">Back</string>
    <string name="select_a_genre">Select a genre</string>
    <string name="book_goal_progress">Book Goal Progress</string>
    <string name="page_goal_progress">Page Goal Progress</string>
    <string name="an_image_of_the_book_being_shown">An image of the book being shown</string>
    <string name="add_a_picture_to_the_book">Add a picture to the book</string>

    <string-array name="book_genres">
        <item name="Fantasy">Fantasy</item>
        <item name="Horror">Horror</item>
        <item name="Children">Children</item>
        <item name="Non-fiction">Non-fiction</item>
        <item name="Science Fiction">Science Fiction</item>
        <item name="Romance">Romance</item>
        <item name="Self-Help">Self-Help</item>
        <item name="Religious">Religious</item>
    </string-array>
</resources>