<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clCreateAccountRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".CreateAccountFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCreateAccountCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNewAccountTitle"
                android:text="@string/account_creation"
                style="@style/page_heading_style" />

            <EditText
                android:id="@+id/etNewUsername"
                android:hint="@string/username_placeholder"
                style="@style/field_entry_style"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/password_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/etNewFavouriteGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/favourite_genre"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/etNewFavouriteBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/favourite_book"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/etNewBookGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/book_reading_goal_per_year"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/etNewPageGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/page_reading_goal_per_year"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="15dp" >

                <Button
                    android:id="@+id/btnCancelCreateAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/deep_red"
                    android:text="@android:string/cancel" />

                <Button
                    android:id="@+id/btnSaveCreateAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/deep_red"
                    android:text="@string/create_account" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>