<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clAccountDetailsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="false"
    android:background="@color/grey"
    tools:context=".AccountDetailsFragment">

    <TextView
        android:id="@+id/tvStatsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="cursive"
        android:shadowColor="@color/deep_red"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="1.5"
        android:text="@string/stats"
        android:textColor="@color/deep_red"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/btnLogOut"
        style="@style/save_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llStatsHolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/deep_red"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatsTitle">

        <TextView
            android:id="@+id/tvBooksProgressHeading"
            style="@style/info_field_text"
            android:text="@string/book_goal_progress" />

        <ProgressBar
            android:id="@+id/pbBooksProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:indeterminate="false" />

        <TextView
            android:id="@+id/tvBooksProgressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvPagesProgressHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/page_goal_progress"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/pbPagesProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:indeterminate="false" />

        <TextView
            android:id="@+id/tvPagesProgressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvMostReadGenreHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/most_read_genre"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMostReadGenreIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/no_goal_set"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvRecentBookHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/most_recent_book_read"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRecentBookIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/no_goal_set"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llStatsNavHolder"
        style="@style/nav_holder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llStatsHolder"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bnvStatsNavigation"
            style="@style/bottom_nav_bar"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:menu="@menu/spellbooks_bottom_navigation_menu" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>