<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvLoginAppTitle"
        android:layout_width="256dp"
        android:layout_height="81dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:shadowColor="@color/deep_red"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="1.5"
        android:text="@string/app_name"
        android:textColor="@color/deep_red"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username_placeholder"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginAppTitle"
        app:layout_constraintVertical_bias="0.277" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginUsername"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tvCreateAccountNote"
        android:layout_width="165dp"
        android:layout_height="22dp"
        android:gravity="center"
        android:text="@string/create_account_note"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword"
        app:layout_constraintVertical_bias="0.216" />

    <TextView
        android:id="@+id/tvCreateAccountLink"
        android:layout_width="168dp"
        android:layout_height="48dp"
        android:layout_marginTop="43dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="2.3"
        android:shadowDy="2.3"
        android:shadowRadius="2.0"
        android:text="@string/create_account_link"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvCreateAccountNote"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword"
        app:layout_constraintVertical_bias="0.0"
        tools:focusable="true" />
</androidx.constraintlayout.widget.ConstraintLayout>